add method to add history for all buy proces, made refactoring: