@@ -2,7 +2,9 @@ package md.lazari.vendingmachine.controller;
 
 import md.lazari.vendingmachine.model.BankAccount;
 import md.lazari.vendingmachine.model.Item;
+import md.lazari.vendingmachine.model.VendingMachineHistory;
 import md.lazari.vendingmachine.repository.ItemRepository;
+import md.lazari.vendingmachine.repository.VendingMachineHistoryRepository;
 import md.lazari.vendingmachine.service.BankAccountService;
 import md.lazari.vendingmachine.service.ItemService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,6 +12,7 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.LocalDate;
 import java.util.Optional;
 
 @Controller
@@ -21,6 +24,9 @@ public class ItemController {
 
     @Autowired
     private BankAccountService bankAccountService;
+
+    @Autowired
+    private VendingMachineHistoryRepository vendingMachineHistoryRepository;
 
 
     @GetMapping("/items")
@@ -38,11 +44,14 @@ public class ItemController {
     public String deleteItem(@PathVariable("id") Integer id){
         Optional<Item> optionalItem = itemRepository.findById(id);
         String stringPrice = itemRepository.findById(id).get().price;
-        Double price =new Double(stringPrice.replaceAll("\\$", ""));
+        Double price =Double.valueOf(stringPrice.replaceAll("\\$", ""));
         if (optionalItem.isPresent()) {
             Item item = optionalItem.get();
             if (item.amount != 0) {
                 item.amount--;
+                String historyInfo = "Sell item: " + item.getName() + ", with price: " + item.price;
+                VendingMachineHistory vendingMachineHistory = new VendingMachineHistory(LocalDate.now(),historyInfo);
+                vendingMachineHistoryRepository.save(vendingMachineHistory);
                 bankAccountService.spendMoney(price);
                 if (bankAccountService.spendMoney(price) == false) {
                     return "redirect:/items";
